fix tooltip/reversed (#35)
* fix tooltip/reversed

* fix flipped tooltip arrows

* mwe-popups: style missed border 

Yep found that these dont have borders except on the arrow, looks weird, this cures it.

* mwe-popup: fix settings button hover/focus

* remove .RTflipped since all css is needed as was.

* re-add .referencetooltip.RTflipped

this is the references tooltip flipped when it flips (arrow on top)

* fix oo-ui-popupWidget (tooltips)

see https://github.com/StylishThemes/Wikipedia-Dark/pull/35#issuecomment-398455447

* syntax highlighting: fix it, thanks to @Mottie and his p

* There goes the p that came from Mottie.

Im not into that :)

* Fix spacing

--- a/wikipedia-dark.css
+++ b/wikipedia-dark.css
@@ -243,14 +243,27 @@
     border-bottom-color: #555 !important;
   }
   .mwe-popups.flipped_y:before, .mwe-popups.flipped_x_y:before,
-  .wikiEditor-toolbar-dialog .ui-dialog-buttonpane {
+  .wikiEditor-toolbar-dialog .ui-dialog-buttonpane,
+  .mwe-popups.flipped-y:before, .mwe-popups.flipped-x-y:before {
     border-top-color: #555 !important;
   }
-  .mwe-popups:after {
+  .mwe-popups:after,
+  .oo-ui-popupWidget-anchored-top .oo-ui-popupWidget-anchor:before,
+  .oo-ui-popupWidget-anchored-top .oo-ui-popupWidget-anchor:after {
     border-bottom-color: #222 !important;
   }
-  .mwe-popups.flipped_y:after, .mwe-popups.flipped_x_y:after {
+  .mwe-popups.flipped_y:after, .mwe-popups.flipped_x_y:after,
+  .mwe-popups.flipped-y:after, .mwe-popups.flipped-x-y:after,
+  .oo-ui-popupWidget-anchored-bottom .oo-ui-popupWidget-anchor:before,
+  .oo-ui-popupWidget-anchored-bottom .oo-ui-popupWidget-anchor:after {
     border-top-color: #222 !important;
+  }
+  .mwe-popups, .mwe-popups-is-not-tall, .mwe-popups-is-tall,
+  .oo-ui-popupWidget-popup {
+    border: 1px solid #555 !important;
+  }
+  .mwe-popups-settings-icon:hover, .mwe-popups-settings-icon:active {
+    background-color: #444 !important;
   }
 
   div.vectorTabs li:not(.selected), .oo-ui-popupWidget-anchor:after,
@@ -258,12 +271,27 @@
     border-bottom: #555 1px solid !important;
   }
 
+  .referencetooltip > li {
+    background: #222 !important;
+    border: 1px solid #555 !important;
+  }
+
   /* arrow down */
   .referencetooltip > li + li, .referencetooltip > li + li::after {
-    border-top-color: #555 !important;
+    border-top-color: #222 !important;
     border-right-color: transparent !important;
     border-left-color: transparent !important;
   }
+  .referencetooltip > li + li {
+    border-top: 12px #555 solid !important;
+  }
+  .referencetooltip.RTflipped > li + li {
+    border-bottom-color: #222 !important;
+  }
+  .referencetooltip.RTflipped > li + li::after {
+    border-bottom-color: transparent !important;
+  }
+
   /* Bookmark Icon */
   #ca-watch.icon a {
     background-image: url('data:image/svg+xml,<%3Fxml%20version%3D"1.0"%20encoding%3D"UTF-8"%3F><svg%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20width%3D"16"%20height%3D"16"><path%20d%3D"M8.103%201.146l2.175%204.408%204.864.707-3.52%203.431.831%204.845-4.351-2.287-4.351%202.287.831-4.845-3.52-3.431%204.864-.707z"%20fill%3D"transparent"%20stroke%3D"%237cb5d1"%20stroke-width%3D"1"%2F><%2Fsvg>') !important;
